--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: 'Quicksand', sans-serif;
+   font-size:62.5%; 
+}
+ 
+*,
+:before,
+:after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  .card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+ 
+.card {
+  display: flex;
+  width: 40rem;
+  margin: 10px;
+  height: 30rem;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0.1rem 0.1rem 0.1rem #aaa;
+  border: 1px solid grey;
+  border-radius: 10px;
+  overflow: hidden;
+  transform: rotateY(20deg);
+  transition: all 0.5s;
+}
+ 
+.card:hover {
+  transform: rotateY(20deg) translateY(-0.5rem);
+  box-shadow: 0.5rem 0.5rem 0.5rem #aaa;
+}
+ 
+.card p {
+  font-size: 1.6rem;
+}
+ 
+.card img {
+  height: 80%;
+  width: 100%;
+}
+
+
+h3{font-weight: 400;}
+h2{
+  font-size: 3.2rem;
+  font-weight: 500;
+}
+
+form input {
+  font-size:1.6rem!important
+}
+
